Fix dark mode button icon change bug

--- a/css/Contato.css
+++ b/css/Contato.css
@@ -71,6 +71,6 @@ th, td {
 }
 
 @media screen and (max-width: 1000px) {
-    .contact {width: 90%;}
+    .contact {width: 85%;}
     
 }
